--- a/dotfiles/eclipse.ini
+++ b/dotfiles/eclipse.ini
@@ -9,8 +9,9 @@ org.eclipse.platform
 --launcher.defaultAction
 openFile
 -vmargs
--Xms256m
--Xmx1024m
+-Xms128m
+-Xmx512m
+-XX:MaxPermSize=256m
 -Xdock:icon=../Resources/Eclipse.icns
 -XstartOnFirstThread
 -Dorg.eclipse.swt.internal.carbon.smallFonts
